Fix misaligned timetable

--- a/src/app/timetable/timetable.component.css
+++ b/src/app/timetable/timetable.component.css
@@ -50,6 +50,11 @@
     padding-bottom: 10px;
   }
 
+  .whack-table-wrapper {
+    max-width: 100%;
+    overflow-x: auto;
+  }
+
   .inner-table {
     width: 100%;
   }
